callout spacing fixes

--- a/server/webapp/WEB-INF/rails/webpack/views/components/flash_message/index.scss
+++ b/server/webapp/WEB-INF/rails/webpack/views/components/flash_message/index.scss
@@ -18,10 +18,10 @@
 .callout {
   font-weight:   600;
   font-size:     12px;
-  padding:       7px 40px 7px 10px;
+  padding:       7px 40px 7px 30px;
   border:        1px solid transparent;
   border-radius: $global-border-radius;
-  margin:        10px 0;
+  margin:        0 0 10px 0;
   position:      relative;
 
   p {
